tests/ui/inference/issue-104649.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-104649.rs:24:26
   |
LL |     let a = A(Result::Ok(Result::Ok(())));
   |                          ^^^^^^^^^^^^^^ cannot infer type for type parameter `E` declared on the enum `Result`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
